// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Leaderboard should match snapShot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LeaderBoard
    clubs={
        Object {
            "clubActivity": Object {
              "Benjamin": Object {
                "membersRecent": "Light rail trip",
                "totalDistance": 1.17,
                "totalTime": 20,
              },
              "Jesse": Object {
                "membersRecent": "Evening Run",
                "totalDistance": 278.77,
                "totalTime": 5297,
              },
              "Pamela": Object {
                "membersRecent": "Afternoon Run",
                "totalDistance": 62.88999999999999,
                "totalTime": 635,
              },
              "Paul": Object {
                "membersRecent": "Morning Run",
                "totalDistance": 7.87,
                "totalTime": 101,
              },
              "mostRecent": Object {
                "activity": "Morning Run",
                "distance": 1.4110627719080175,
                "name": "Paul",
              },
            },
            "clubInfo": Object {
              "clubId": 473825,
              "clubName": "Stravant Club",
            },
          }
    }
    currentUser={
        Object {
            "info": Object {
              "accessToken": "a7eeea216a46a760a74c60acbffc3b55c66537c5",
              "firstName": "Paul",
              "gender": "M",
              "profilePic": "https://lh4.googleusercontent.com/-q79bv4Nc_dY/AAAAAAAAAAI/AAAAAAAAAAA/APUIFaMcxPJyTx-ZbjWs8aCsKgkL96lV4w/mo/photo.jpg",
              "userId": 34515396,
            },
            "totalStats": Object {},
            "weeklyStats": Object {},
          }
    }
    setClubActivity={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        Array [
          <div>
            <h3
                        className="recent-dash"
            >
                        Paul did a 1.41
                              mile Morning Run
            </h3>
</div>,
        ],
        <table
          width="500"
>
          <tbody>
                    <tr>
                              <th>
                                        Name
                              </th>
                              <th>
                                        Recent
                              </th>
                              <th>
                                        Distance(mi)
                              </th>
                              <th>
                                        Duration(m)
                              </th>
                    </tr>
                    <tr>
                              <td>
                                        Jesse
                              </td>
                              <td>
                                        Evening Run
                              </td>
                              <td>
                                        278.77
                              </td>
                              <td>
                                        5297
                              </td>
                    </tr>
                    <tr>
                              <td>
                                        Pamela
                              </td>
                              <td>
                                        Afternoon Run
                              </td>
                              <td>
                                        62.89
                              </td>
                              <td>
                                        635
                              </td>
                    </tr>
                    <tr>
                              <td>
                                        Paul
                              </td>
                              <td>
                                        Morning Run
                              </td>
                              <td>
                                        7.87
                              </td>
                              <td>
                                        101
                              </td>
                    </tr>
                    <tr>
                              <td>
                                        Benjamin
                              </td>
                              <td>
                                        Light rail trip
                              </td>
                              <td>
                                        1.17
                              </td>
                              <td>
                                        20
                              </td>
                    </tr>
          </tbody>
</table>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <h3
            className="recent-dash"
>
            Paul did a 1.41
                  mile Morning Run
</h3>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Paul did a 1.41
      mile Morning Run",
            "className": "recent-dash",
          },
          "ref": null,
          "rendered": "Paul did a 1.41
      mile Morning Run",
          "type": "h3",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            false,
            <tbody>
              <tr>
                            <th>
                                          Name
                            </th>
                            <th>
                                          Recent
                            </th>
                            <th>
                                          Distance(mi)
                            </th>
                            <th>
                                          Duration(m)
                            </th>
              </tr>
              <tr>
                            <td>
                                          Jesse
                            </td>
                            <td>
                                          Evening Run
                            </td>
                            <td>
                                          278.77
                            </td>
                            <td>
                                          5297
                            </td>
              </tr>
              <tr>
                            <td>
                                          Pamela
                            </td>
                            <td>
                                          Afternoon Run
                            </td>
                            <td>
                                          62.89
                            </td>
                            <td>
                                          635
                            </td>
              </tr>
              <tr>
                            <td>
                                          Paul
                            </td>
                            <td>
                                          Morning Run
                            </td>
                            <td>
                                          7.87
                            </td>
                            <td>
                                          101
                            </td>
              </tr>
              <tr>
                            <td>
                                          Benjamin
                            </td>
                            <td>
                                          Light rail trip
                            </td>
                            <td>
                                          1.17
                            </td>
                            <td>
                                          20
                            </td>
              </tr>
</tbody>,
          ],
          "width": "500",
        },
        "ref": null,
        "rendered": Array [
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <tr>
                  <th>
                                    Name
                  </th>
                  <th>
                                    Recent
                  </th>
                  <th>
                                    Distance(mi)
                  </th>
                  <th>
                                    Duration(m)
                  </th>
</tr>,
                Array [
                  <tr>
                    <td>
                                        Jesse
                    </td>
                    <td>
                                        Evening Run
                    </td>
                    <td>
                                        278.77
                    </td>
                    <td>
                                        5297
                    </td>
</tr>,
                  <tr>
                    <td>
                                        Pamela
                    </td>
                    <td>
                                        Afternoon Run
                    </td>
                    <td>
                                        62.89
                    </td>
                    <td>
                                        635
                    </td>
</tr>,
                  <tr>
                    <td>
                                        Paul
                    </td>
                    <td>
                                        Morning Run
                    </td>
                    <td>
                                        7.87
                    </td>
                    <td>
                                        101
                    </td>
</tr>,
                  <tr>
                    <td>
                                        Benjamin
                    </td>
                    <td>
                                        Light rail trip
                    </td>
                    <td>
                                        1.17
                    </td>
                    <td>
                                        20
                    </td>
</tr>,
                ],
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <th>
                      Name
</th>,
                    <th>
                      Recent
</th>,
                    <th>
                      Distance(mi)
</th>,
                    <th>
                      Duration(m)
</th>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Name",
                    },
                    "ref": null,
                    "rendered": "Name",
                    "type": "th",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Recent",
                    },
                    "ref": null,
                    "rendered": "Recent",
                    "type": "th",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Distance(mi)",
                    },
                    "ref": null,
                    "rendered": "Distance(mi)",
                    "type": "th",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Duration(m)",
                    },
                    "ref": null,
                    "rendered": "Duration(m)",
                    "type": "th",
                  },
                ],
                "type": "tr",
              },
              Object {
                "instance": null,
                "key": "0",
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <td>
                      Jesse
</td>,
                    <td>
                      Evening Run
</td>,
                    <td>
                      278.77
</td>,
                    <td>
                      5297
</td>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Jesse",
                    },
                    "ref": null,
                    "rendered": "Jesse",
                    "type": "td",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Evening Run",
                    },
                    "ref": null,
                    "rendered": "Evening Run",
                    "type": "td",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": 278.77,
                    },
                    "ref": null,
                    "rendered": 278.77,
                    "type": "td",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": 5297,
                    },
                    "ref": null,
                    "rendered": 5297,
                    "type": "td",
                  },
                ],
                "type": "tr",
              },
              Object {
                "instance": null,
                "key": "1",
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <td>
                      Pamela
</td>,
                    <td>
                      Afternoon Run
</td>,
                    <td>
                      62.89
</td>,
                    <td>
                      635
</td>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Pamela",
                    },
                    "ref": null,
                    "rendered": "Pamela",
                    "type": "td",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Afternoon Run",
                    },
                    "ref": null,
                    "rendered": "Afternoon Run",
                    "type": "td",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": 62.89,
                    },
                    "ref": null,
                    "rendered": 62.89,
                    "type": "td",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": 635,
                    },
                    "ref": null,
                    "rendered": 635,
                    "type": "td",
                  },
                ],
                "type": "tr",
              },
              Object {
                "instance": null,
                "key": "2",
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <td>
                      Paul
</td>,
                    <td>
                      Morning Run
</td>,
                    <td>
                      7.87
</td>,
                    <td>
                      101
</td>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Paul",
                    },
                    "ref": null,
                    "rendered": "Paul",
                    "type": "td",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Morning Run",
                    },
                    "ref": null,
                    "rendered": "Morning Run",
                    "type": "td",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": 7.87,
                    },
                    "ref": null,
                    "rendered": 7.87,
                    "type": "td",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": 101,
                    },
                    "ref": null,
                    "rendered": 101,
                    "type": "td",
                  },
                ],
                "type": "tr",
              },
              Object {
                "instance": null,
                "key": "3",
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <td>
                      Benjamin
</td>,
                    <td>
                      Light rail trip
</td>,
                    <td>
                      1.17
</td>,
                    <td>
                      20
</td>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Benjamin",
                    },
                    "ref": null,
                    "rendered": "Benjamin",
                    "type": "td",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Light rail trip",
                    },
                    "ref": null,
                    "rendered": "Light rail trip",
                    "type": "td",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": 1.17,
                    },
                    "ref": null,
                    "rendered": 1.17,
                    "type": "td",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": 20,
                    },
                    "ref": null,
                    "rendered": 20,
                    "type": "td",
                  },
                ],
                "type": "tr",
              },
            ],
            "type": "tbody",
          },
        ],
        "type": "table",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          Array [
            <div>
              <h3
                            className="recent-dash"
              >
                            Paul did a 1.41
                                  mile Morning Run
              </h3>
</div>,
          ],
          <table
            width="500"
>
            <tbody>
                        <tr>
                                    <th>
                                                Name
                                    </th>
                                    <th>
                                                Recent
                                    </th>
                                    <th>
                                                Distance(mi)
                                    </th>
                                    <th>
                                                Duration(m)
                                    </th>
                        </tr>
                        <tr>
                                    <td>
                                                Jesse
                                    </td>
                                    <td>
                                                Evening Run
                                    </td>
                                    <td>
                                                278.77
                                    </td>
                                    <td>
                                                5297
                                    </td>
                        </tr>
                        <tr>
                                    <td>
                                                Pamela
                                    </td>
                                    <td>
                                                Afternoon Run
                                    </td>
                                    <td>
                                                62.89
                                    </td>
                                    <td>
                                                635
                                    </td>
                        </tr>
                        <tr>
                                    <td>
                                                Paul
                                    </td>
                                    <td>
                                                Morning Run
                                    </td>
                                    <td>
                                                7.87
                                    </td>
                                    <td>
                                                101
                                    </td>
                        </tr>
                        <tr>
                                    <td>
                                                Benjamin
                                    </td>
                                    <td>
                                                Light rail trip
                                    </td>
                                    <td>
                                                1.17
                                    </td>
                                    <td>
                                                20
                                    </td>
                        </tr>
            </tbody>
</table>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <h3
              className="recent-dash"
>
              Paul did a 1.41
                    mile Morning Run
</h3>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Paul did a 1.41
      mile Morning Run",
              "className": "recent-dash",
            },
            "ref": null,
            "rendered": "Paul did a 1.41
      mile Morning Run",
            "type": "h3",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              false,
              <tbody>
                <tr>
                                <th>
                                                Name
                                </th>
                                <th>
                                                Recent
                                </th>
                                <th>
                                                Distance(mi)
                                </th>
                                <th>
                                                Duration(m)
                                </th>
                </tr>
                <tr>
                                <td>
                                                Jesse
                                </td>
                                <td>
                                                Evening Run
                                </td>
                                <td>
                                                278.77
                                </td>
                                <td>
                                                5297
                                </td>
                </tr>
                <tr>
                                <td>
                                                Pamela
                                </td>
                                <td>
                                                Afternoon Run
                                </td>
                                <td>
                                                62.89
                                </td>
                                <td>
                                                635
                                </td>
                </tr>
                <tr>
                                <td>
                                                Paul
                                </td>
                                <td>
                                                Morning Run
                                </td>
                                <td>
                                                7.87
                                </td>
                                <td>
                                                101
                                </td>
                </tr>
                <tr>
                                <td>
                                                Benjamin
                                </td>
                                <td>
                                                Light rail trip
                                </td>
                                <td>
                                                1.17
                                </td>
                                <td>
                                                20
                                </td>
                </tr>
</tbody>,
            ],
            "width": "500",
          },
          "ref": null,
          "rendered": Array [
            false,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <tr>
                    <th>
                                        Name
                    </th>
                    <th>
                                        Recent
                    </th>
                    <th>
                                        Distance(mi)
                    </th>
                    <th>
                                        Duration(m)
                    </th>
</tr>,
                  Array [
                    <tr>
                      <td>
                                            Jesse
                      </td>
                      <td>
                                            Evening Run
                      </td>
                      <td>
                                            278.77
                      </td>
                      <td>
                                            5297
                      </td>
</tr>,
                    <tr>
                      <td>
                                            Pamela
                      </td>
                      <td>
                                            Afternoon Run
                      </td>
                      <td>
                                            62.89
                      </td>
                      <td>
                                            635
                      </td>
</tr>,
                    <tr>
                      <td>
                                            Paul
                      </td>
                      <td>
                                            Morning Run
                      </td>
                      <td>
                                            7.87
                      </td>
                      <td>
                                            101
                      </td>
</tr>,
                    <tr>
                      <td>
                                            Benjamin
                      </td>
                      <td>
                                            Light rail trip
                      </td>
                      <td>
                                            1.17
                      </td>
                      <td>
                                            20
                      </td>
</tr>,
                  ],
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <th>
                        Name
</th>,
                      <th>
                        Recent
</th>,
                      <th>
                        Distance(mi)
</th>,
                      <th>
                        Duration(m)
</th>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Name",
                      },
                      "ref": null,
                      "rendered": "Name",
                      "type": "th",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Recent",
                      },
                      "ref": null,
                      "rendered": "Recent",
                      "type": "th",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Distance(mi)",
                      },
                      "ref": null,
                      "rendered": "Distance(mi)",
                      "type": "th",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Duration(m)",
                      },
                      "ref": null,
                      "rendered": "Duration(m)",
                      "type": "th",
                    },
                  ],
                  "type": "tr",
                },
                Object {
                  "instance": null,
                  "key": "0",
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <td>
                        Jesse
</td>,
                      <td>
                        Evening Run
</td>,
                      <td>
                        278.77
</td>,
                      <td>
                        5297
</td>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Jesse",
                      },
                      "ref": null,
                      "rendered": "Jesse",
                      "type": "td",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Evening Run",
                      },
                      "ref": null,
                      "rendered": "Evening Run",
                      "type": "td",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": 278.77,
                      },
                      "ref": null,
                      "rendered": 278.77,
                      "type": "td",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": 5297,
                      },
                      "ref": null,
                      "rendered": 5297,
                      "type": "td",
                    },
                  ],
                  "type": "tr",
                },
                Object {
                  "instance": null,
                  "key": "1",
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <td>
                        Pamela
</td>,
                      <td>
                        Afternoon Run
</td>,
                      <td>
                        62.89
</td>,
                      <td>
                        635
</td>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Pamela",
                      },
                      "ref": null,
                      "rendered": "Pamela",
                      "type": "td",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Afternoon Run",
                      },
                      "ref": null,
                      "rendered": "Afternoon Run",
                      "type": "td",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": 62.89,
                      },
                      "ref": null,
                      "rendered": 62.89,
                      "type": "td",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": 635,
                      },
                      "ref": null,
                      "rendered": 635,
                      "type": "td",
                    },
                  ],
                  "type": "tr",
                },
                Object {
                  "instance": null,
                  "key": "2",
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <td>
                        Paul
</td>,
                      <td>
                        Morning Run
</td>,
                      <td>
                        7.87
</td>,
                      <td>
                        101
</td>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Paul",
                      },
                      "ref": null,
                      "rendered": "Paul",
                      "type": "td",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Morning Run",
                      },
                      "ref": null,
                      "rendered": "Morning Run",
                      "type": "td",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": 7.87,
                      },
                      "ref": null,
                      "rendered": 7.87,
                      "type": "td",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": 101,
                      },
                      "ref": null,
                      "rendered": 101,
                      "type": "td",
                    },
                  ],
                  "type": "tr",
                },
                Object {
                  "instance": null,
                  "key": "3",
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <td>
                        Benjamin
</td>,
                      <td>
                        Light rail trip
</td>,
                      <td>
                        1.17
</td>,
                      <td>
                        20
</td>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Benjamin",
                      },
                      "ref": null,
                      "rendered": "Benjamin",
                      "type": "td",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Light rail trip",
                      },
                      "ref": null,
                      "rendered": "Light rail trip",
                      "type": "td",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": 1.17,
                      },
                      "ref": null,
                      "rendered": 1.17,
                      "type": "td",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": 20,
                      },
                      "ref": null,
                      "rendered": 20,
                      "type": "td",
                    },
                  ],
                  "type": "tr",
                },
              ],
              "type": "tbody",
            },
          ],
          "type": "table",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Leaderboard should matchSnapshot if there is no club activity 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LeaderBoard
    clubs={
        Object {
            "clubActivity": Object {},
            "clubInfo": Object {
              "clubId": 473825,
              "clubName": "Stravant Club",
            },
          }
    }
    currentUser={
        Object {
            "info": Object {
              "accessToken": "a7eeea216a46a760a74c60acbffc3b55c66537c5",
              "firstName": "Paul",
              "gender": "M",
              "profilePic": "https://lh4.googleusercontent.com/-q79bv4Nc_dY/AAAAAAAAAAI/AAAAAAAAAAA/APUIFaMcxPJyTx-ZbjWs8aCsKgkL96lV4w/mo/photo.jpg",
              "userId": 34515396,
            },
            "totalStats": Object {},
            "weeklyStats": Object {},
          }
    }
    setClubActivity={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        Array [],
        <table
          width="500"
>
          <img
                    className="connect-logo"
                    height="100"
                    src="https://media.giphy.com/media/26xBNwL69IM5ng3f2/source.gif"
                    width="100"
          />
          <tbody>
                    <tr>
                              <th>
                                        Name
                              </th>
                              <th>
                                        Recent
                              </th>
                              <th>
                                        Distance(mi)
                              </th>
                              <th>
                                        Duration(m)
                              </th>
                    </tr>
          </tbody>
</table>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <img
              className="connect-logo"
              height="100"
              src="https://media.giphy.com/media/26xBNwL69IM5ng3f2/source.gif"
              width="100"
/>,
            <tbody>
              <tr>
                            <th>
                                          Name
                            </th>
                            <th>
                                          Recent
                            </th>
                            <th>
                                          Distance(mi)
                            </th>
                            <th>
                                          Duration(m)
                            </th>
              </tr>
</tbody>,
          ],
          "width": "500",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "connect-logo",
              "height": "100",
              "src": "https://media.giphy.com/media/26xBNwL69IM5ng3f2/source.gif",
              "width": "100",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <tr>
                  <th>
                                    Name
                  </th>
                  <th>
                                    Recent
                  </th>
                  <th>
                                    Distance(mi)
                  </th>
                  <th>
                                    Duration(m)
                  </th>
</tr>,
                Array [],
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <th>
                      Name
</th>,
                    <th>
                      Recent
</th>,
                    <th>
                      Distance(mi)
</th>,
                    <th>
                      Duration(m)
</th>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Name",
                    },
                    "ref": null,
                    "rendered": "Name",
                    "type": "th",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Recent",
                    },
                    "ref": null,
                    "rendered": "Recent",
                    "type": "th",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Distance(mi)",
                    },
                    "ref": null,
                    "rendered": "Distance(mi)",
                    "type": "th",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Duration(m)",
                    },
                    "ref": null,
                    "rendered": "Duration(m)",
                    "type": "th",
                  },
                ],
                "type": "tr",
              },
            ],
            "type": "tbody",
          },
        ],
        "type": "table",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          Array [],
          <table
            width="500"
>
            <img
                        className="connect-logo"
                        height="100"
                        src="https://media.giphy.com/media/26xBNwL69IM5ng3f2/source.gif"
                        width="100"
            />
            <tbody>
                        <tr>
                                    <th>
                                                Name
                                    </th>
                                    <th>
                                                Recent
                                    </th>
                                    <th>
                                                Distance(mi)
                                    </th>
                                    <th>
                                                Duration(m)
                                    </th>
                        </tr>
            </tbody>
</table>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <img
                className="connect-logo"
                height="100"
                src="https://media.giphy.com/media/26xBNwL69IM5ng3f2/source.gif"
                width="100"
/>,
              <tbody>
                <tr>
                                <th>
                                                Name
                                </th>
                                <th>
                                                Recent
                                </th>
                                <th>
                                                Distance(mi)
                                </th>
                                <th>
                                                Duration(m)
                                </th>
                </tr>
</tbody>,
            ],
            "width": "500",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "connect-logo",
                "height": "100",
                "src": "https://media.giphy.com/media/26xBNwL69IM5ng3f2/source.gif",
                "width": "100",
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <tr>
                    <th>
                                        Name
                    </th>
                    <th>
                                        Recent
                    </th>
                    <th>
                                        Distance(mi)
                    </th>
                    <th>
                                        Duration(m)
                    </th>
</tr>,
                  Array [],
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <th>
                        Name
</th>,
                      <th>
                        Recent
</th>,
                      <th>
                        Distance(mi)
</th>,
                      <th>
                        Duration(m)
</th>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Name",
                      },
                      "ref": null,
                      "rendered": "Name",
                      "type": "th",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Recent",
                      },
                      "ref": null,
                      "rendered": "Recent",
                      "type": "th",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Distance(mi)",
                      },
                      "ref": null,
                      "rendered": "Distance(mi)",
                      "type": "th",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Duration(m)",
                      },
                      "ref": null,
                      "rendered": "Duration(m)",
                      "type": "th",
                    },
                  ],
                  "type": "tr",
                },
              ],
              "type": "tbody",
            },
          ],
          "type": "table",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
